--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         width: 150px;
         border-radius: 100%;
         border: 2px solid black;
+        background-image: url("logo.jpg");
+        background-size: contain;
     }
     .gat{
         display: flex;
