--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </div>
 <div class="gate">
 <h1 style="text-align: center;"> ENTRY FORM</h1>
-<form  id="form" method="post" action="connect.php">
+<form  id="form" action="https://aalugupta.github.io/form2/">
     <div style="border-radius: 1rem;">
         <input type="text" placeholder="Your Name" id="name" name="name" style="height: 40px;width:250px;">
         <input type="number" placeholder="Phone No" id="number" name="number" style="height: 40px;width:250px;"><br><br><br>
@@ -63,9 +63,7 @@
     <input type="text" placeholder="flat no" id="flat" name="flat " style="height: 40px;width:250px;">
     <br><br><br>
    <label for="b1">
-    <a href="pass.html">
         <input type="submit" value="Submit" id="b1" style="width: 150px;height: 30px;background-color: blue;border-radius:2px solid black;font-size: 25px;color: white; border-radius: .5rem;">
-    </a>
    </label>
     </div>
 </form>
